contact and about me desktop spacing fixed in css

--- a/css/ruby_stylesheet.css
+++ b/css/ruby_stylesheet.css
@@ -171,7 +171,9 @@ section {
         background-size: cover;
         background-position: top right;
     }
-
+/*========================================================================
+                                DESKTOP
+=======================================================================*/
 
 @media screen and (min-width: 601px) {
     .firstname,
@@ -212,6 +214,15 @@ section {
         padding-top: 0px;
         padding-bottom: 0px;
         font-size: 20px;
+    }
+ 
+    #aboutme {
+        padding-bottom: 220px;
+    }
+
+    #contact {
+        padding-top: 0px; /* space before main title logo */
+        padding-bottom: 110px; /* space after */
     }
 }
 
